--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "craftcms/cms": "^3.0.0",
     "csanquer/pdo-service-provider": "~1.1dev",
-    "vlucas/phpdotenv": "^2.4.0"
+    "vlucas/phpdotenv": "^2.4.0",
+    "ext-gd": "*"
   },
   "autoload": {
     "psr-4": {
